# sre-portfolio

./: .dockerignore  .env_copy  .gitignore  Dockerfile  README.md  deploy.sh  main.py  pyproject.toml  tailwind.config.js
.github/workflows/: ci.yml  cronitor.yml  deploy.yml  scheduled-heartbeat.yml
api/: config.py  logging_config.py  main.py
api/data/: projects.json
api/models/: project.py
api/repositories/: firestore_repository.py  json_repository.py
api/routers/: asset_router.py  project_router.py
api/services/: asset_service.py  project_service.py
infra/: artifactregistry.tf  cloudrun-v2service.tf.backup  cloudrun.tf  domain.tf  firestore.tf  iam.tf  main.tf  monitoring.tf  outputs.tf  outputs.tf.backup  provider.tf  storage.tf  terraform.tfvars.sample  terraform_sample  variables.tf
tests/: test_api.py
web/: index.html  robots.txt  tailwind.config.js
web/css/: main.css
web/html/: about.html  base.html  connect.html  index.html  projects.html
web/js/: app.js
web/static/css/: mediaqueries.css  style.css
