[project]
name = "portfolio"
version = "0.1.0"
description = "A stateless, high-performance SRE portfolio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "pydantic-settings>=2.14.0",
    "uvicorn>=0.41.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "tini>=4.0.0",
    "google-cloud-storage>=3.10.1"
]
